# gnome-shell-extension-mconnect

./: .gitignore  .gitmodules  CONTRIBUTING.md  Makefile.am  README.md  autogen.sh  configure.ac  include.mk  meson.build  metadata.json  utils.js
config/: .gitignore
data/: meson.build  metadata.json.in  org.gnome.shell.extensions.mconnect.gresource.xml  org.gnome.shell.extensions.mconnect.gschema.xml
mconnect@andyholmes.github.io/: Sw.js  extension.js  kdeconnect.js  logging.js  mconnect.js  metadata.json  org.gnome.shell.extensions.mconnect.gschema.xml  prefs.js  prefs.ui  sms.js  utils.js
mconnect@andyholmes.github.io/schemas/: gschemas.compiled  org.gnome.shell.extensions.mconnect.gschema.xml
meson/: zip.sh
po/: .gitignore  LINGUAS  Makevars  POTFILES  POTFILES.in  de.po  el.po  fr.po  fr_CA.po  fr_FR.po  gnome-shell-extension-mconnect.pot  hu.po  it_IT.po  nl_NL.po  pl_PL.po  pt_BR.po  pt_PT.po  sk_SK.po  sr.po  sr@latin.po  sv_SE.po
schemas/: org.gnome.shell.extensions.mconnect.gschema.xml
src/: Makefile.am  Sw.js  convenience.js  extension.js  folks.py  kdeconnect.js  lib.js  logging.js  mconnect.js  meson.build  metadata.json.in  nautilus-send-mconnect.py  org.gnome.shell.extensions.mconnect.gschema.xml  org.gnome.shell.extensions.mconnect.gschema.xml.in  prefs.js  prefs.ui  share.js  sms.js  stylesheet.css
